# pyzombie

./: .gitignore  .hgignore  .pre-commit-config.yaml  CHANGELOG.rst  INSTALL.txt  LICENSE.txt  Makefile  README.rst  README.txt  pylintrc  pyproject.toml  pyzombie.cml  pyzombie.pml  pyzombie.tmproj  pyzombie.xml  pyzombied.py  setup.cfg  setup.py
Doc/: conf.py  index.rst
docs/: Makefile
docs/changelog/: README.rst  _template.rst
docs/source/: changelog.rst  conf.py  glossary.rst  index.rst  install.rst  modules.rst  pyzombie.cli.rst  pyzombie.handlers.rst  pyzombie.rst
docs/source/_templates/: links.html
pyzombie/: Executable.py  Handler.py  Instance.py  ZombieConfig.py  ZombieRequest.py  ZombieServer.py  __init__.py
pyzombie/handlers/: HandlerExec.py  HandlerExecAdd.py  HandlerExecSet.py  HandlerExecStart.py  HandlerHelp.py  HandlerInstance.py  HandlerInstanceSet.py  HandlerInstanceStderr.py  HandlerInstanceStdin.py  HandlerInstanceStdout.py  HandlerLeftovers.py  __init__.py
pyzombie/httpfiles/: ExecAdd.html  ExecStart.html
pyzombie/httphelp/: RESTful.rst
setup/: README.txt
setup/lib/distutils_local/: __init__.py  build_docutils.py  changeversion.py  deploy.py  start.py  test.py
src/: build_docutils.py  pyzombied.py
src/buildcmds/: __init__.py  build_html.py
src/pyzombie/: Executable.py  Handler.py  Instance.py  ZombieConfig.py  ZombieRequest.py  ZombieServer.py  __init__.py
src/pyzombie/cli/: __init__.py  logging_default.txt
src/pyzombie/handlers/: HandlerExec.py  HandlerExecAdd.py  HandlerExecSet.py  HandlerExecStart.py  HandlerHelp.py  HandlerInstance.py  HandlerInstanceSet.py  HandlerInstanceStderr.py  HandlerInstanceStdin.py  HandlerInstanceStdout.py  HandlerLeftovers.py  __init__.py
src/pyzombie/httpfiles/: InstanceStdin.html
test/: HTTPResponse.py  MockRequest.py  MockServer.py  ServerTestCase.py
test/handlers/: HandlerExecSetTestCase.py  HandlerHelpTestCase.py  HandlerLeftoversTestCase.py
test/pyzombie/: ExecutableTestCase.py  HTTPResponse.py  InstanceTestCase.py  MockRequest.py  MockServer.py  TestSourceCLI.py  TestSourceCopy.py  ZombieConfigTestCase.py  ZombieServerTestCase.py
tests/pyzombie/: HTTPResponse.py  InstanceTestCase.py  MockRequest.py  MockServer.py  TestSourceCLI.py  TestSourceCopy.py  ZombieServerTestCase.py  test_executable.py  test_instance.py  test_zombieconfig.py  test_zombieserver.py
(+72 files in other folders)
