[metadata]
name = pyzombie
url = https://github.com/flyingtitans/pyzombie
description = Remote code execution server
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords = testing
author = Lance Finn Helsten
author_email = lanhel@flyingtitans.com
license_files = LICENSE
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX
	Operating System :: OS Independent
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3 :: Only
	Topic :: Software Development :: Quality Assurance
	Topic :: Software Development :: Testing
	Topic :: Software Development :: Testing :: Traffic Generation
	Topic :: Utilities'
project_urls=
    Documentation = https://pyzombie.readthedocs.io/en/latest/
    Source = https://github.com/flyingtitans/pyzombie
    Tracker = https://github.com/flyingtitans/pyzombie/issues


[options]
python_requires = >=3.5
command-packages = src.buildcmds
package_dir=
	=src
packages = find:
setup_requires =
	setuptools_scm
install_requires =

[options.packages.find]
where = src

[options.package_data]
pyzombie = httpfiles/*, httphelp/*.css, httphelp/*.rst
pyzombie.cli = *.txt, *.conf

[options.entry_points]
console_scripts = pyzombied=pyzombied.cli.__main__:main

[options.extras_require]
dev   =
	pre-commit>=1.0
	setup-cfg-fmt>=1.0
	black
docs  =
	docutils>=0.3
	Sphinx>=2.0
	sphinxcontrib-plantuml>=0.0
	towncrier>=19.0
	gitpython>=3.0
lint  =
	pylint>=2.3
	pycodestyle>=2.5
	pydocstyle>=3.0
	mypy>=0.710
tests =
	pytest>=4.6
	pytest-cov>=2.7
	coverage>=4.0
	hypothesis>=4.23

[pycodestyle]
count = False
max-line-length = 130
statistics = True

[pydocstyle]
#convention=pep257
#Using pep257 with addition of D202 due to Black
ignore=D202,D203,D212,D213,D214,D215,D404,D405,D406,D407,D408,D409,D410,D411

[mypy]
python_version = 3.0
warn_return_any = True
warn_unused_configs = True

[mypy-deprecated]
ignore_missing_imports = True

[mypy-tqdm]
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
addopts = --maxfail=20 -rf
